- Update NPM dependencies - Added public/gallery/SQ.md example of SQ API - Reordered public/gallery/index.json to be emphasize introductory examples first. - Added build-time environment variable GALLERY_DEV_MODE, which when set to 1 will cause the src/boot/smartdown.js to erase existing notes and auto-load from the gallery each time the application starts. Useful for editing gallery examples in dev mode. - Rename src/helper.js to src/composables/notes.js - Rename src/composables/smartdownEvents.js to SQ.js - Eliminate src/components/ActionLink.vue and EssentialLink.vue and combine them into a DrawerItem.vue component. - Reorder the items in the Drawer to be more sensible. - Adds SQ global variable (available to playables). - Adds SQ.setToolbarTransparency(transparency) function to enable/disable Transparent Toolbar. - Adds SQ.setToolbarVisibility(visibility) function to hide/show toolbar entirely. - Adds SQ.setToolbarFade(fade) function to hide toolbar, but reveal it when hovered/tapped. - Eliminates the 'elevated' option to the toolbar, which aids in Transparent Mode having no border. - Simplifies Toolbar by eliminating using the Smartdown logo button to open the left drawer, and by having an explicit Dashboard drawer item (the topmost) for the purpose of getting to the top level list of Notes. - Adds double-click of Toolbar to shortcut to the top level list of Notes. - Adds ability to Export a note to the local filesystem securely. On iOS, this is the Documents folder visible via the Files app. - Adds ability to Import a note from the local filesystem securely. This can be done from the top level Notes page by either clicking the Upload button, or by dragging a file from the desktop onto that button's dropzone. - Simplifies and resizes the Mandelbrot example. - Ensure that if a non-existent Note is referenced, that the app returns to '/'. - Adjusted smartdown-outer-container CSS to have full width. For some reason (I will look into it), the default Smartdown vers

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,5 +1,10 @@
 // app global css in SCSS form
 
+#smartdown-outer-container.smartdown-outer-container {
+  margin: auto;
+  width: 100%;
+}
+
 .readonly-border {
 	margin: 0;
 	padding: 0;
@@ -15,4 +20,23 @@
 
 .background {
 	background-color: lavender;
+}
+
+.toolbar-transparent {
+  background: transparent !important;
+  border: none !important;
+}
+
+.toolbar-hidden {
+	display: none;
+}
+
+.toolbar-fade {
+	opacity: 0;
+  transition: opacity 3s;
+}
+
+.toolbar-fade:hover {
+	opacity: 1;
+  transition: opacity 1s;
 }
